--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
         "build:watch": "tsc --project tsconfig.json --sourceMap --watch",
         "tsc": "tsc"
     },
+    "dependencies": {
+        "pg": "8.11.3",
+        "ws": "8.16.0"
+    },
     "devDependencies": {
         "@types/node": "20.11.5",
+        "@types/pg": "^8.11.3",
         "@types/ws": "8.5.10",
         "typescript": "5.4.2"
-    },
-    "dependencies": {
-        "ws": "8.16.0"
     }
 }
